# bizfly-crm-sdk

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg
bizfly-crm/: __init__.py  constants.py  utils.py
bizfly-crm/base_table/: client.py
bizfly_crm/: main.py
bizfly_crm/base_table/: __init__.py  client.py
bizfly_crm/common/: __init__.py  constants.py  http.py  utils.py
