[metadata]
name = bizfly_crm_sdk
version = 0.0.1
author = ducva
author_email = dev.diary.io@gmail.com
description = Một ngôn ngữ được dạy ở một trường đại học nào đó
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/devdiary2203/bizfly-crm-sdk
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
packages = find:
python_requires = >=3.7